@@ -19,7 +19,7 @@ eis_glide_LDADD = libglimmer-eis.la $(top_builddir)/libglide/libglide.la $(top_b
                     $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS) $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide $(F90_MODFLAG)$(top_builddir)/libglimmer
-
+AM_LDFLAGS=-all-static
 
 
 #some special rules for automatically generating ncdf src code
